* Improvement: When selecting for a post grid element to "popout" in builder, there is now padding to separate from the browser edge.
* Improvement: More default spacing around sections and elements in custom layouts.
* Improvement: Function `themeblvd_related_posts()` will now allow you to pass any post type and associated taxonomy.
* Updated: FontAwesome to 4.6.
* Updated: FlexSlider to 2.6.
* Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
* Fixed: Sticky menu shouldn't display on any mobile device, no matter the viewport size.
* Fixed: Accordion feature not working with Toggles element of Layout Builder.
* Fixed: When setting an element to pull from a list of pages, the total number of pages returned shouldn't be interfered with.
* Fixed: Contact Bar element was outputting the set of icons twice.
* Fixed: SPAN HTML tags showing in texture browser.
* Fixed: When `themeblvd_tabs_deep_linking` is filtered to true, tab content wasn't changing properly.
* Fixed: Post showcase and grid display for archives not always applying the correct posts per page amount from Theme Options.
* Fixed: Funky display issue on WooCommerce product reviews.
* Fixed: Shopping cart button not displaying with "Super User" and "Executive" theme bases, when header info is set to show "within header."
* Fixed: Partner Logos slider stretching images 100% width of column.
* Fixed: PHP warning on 404 pages, when going to incorrect author URL.
* Fixed: Default theme options "Read More" text not getting applied to post list and post grid elements.
* Fixed: Minor issues with Hero Unit Slider element spacing and height calculation.
* Fixed: WooCommerce breadcrumbs showing empty item, when no shop page is set from WooCommerce settings.
* Fixed: [WPML](http://themeblvd.com/links/wpml) switcher was producing "undefined" error in mobile menu on pages that only had one language.
* Fixed: More minor RTL and Translation bug fixes.