@@ -67,6 +67,7 @@ Jump Start Changelog
 * Improvement: When selecting for a post grid element to "popout" in builder, there is now padding to separate from the browser edge.
 * Improvement: More default spacing around sections and elements in custom layouts.
 * Improvement: Function `themeblvd_related_posts()` will now allow you to pass any post type and associated taxonomy.
+* Improvement: Now using `fa-shopping-basket` icon throughout theme instead of `fa-shopping-cart`.
 * Updated: FontAwesome to 4.6.
 * Updated: FlexSlider to 2.6.
 * Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
